--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zone.js": "^0.12.0"
   },
   "devDependencies": {
+    "@types/node": "latest",
     "@angular-devkit/build-angular": "15.1.0-next.2",
     "@angular/cli": "15.1.0-next.2",
     "@angular/compiler-cli": "15.1.0-next.2",
