1 file modified, 1 added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,8 @@
   "angularCompilerOptions": {
     "strictTemplates": true,
     "strictInjectionParameters": true
-  }
+  },
+  "types": [
+    "node", "@types/express"
+  ]  
 }
