--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "latest",
-    "@types/node": "latest",
+    "@types/node": "18.15.11",
     "@angular-devkit/build-angular": "15.1.0-next.2",
     "@angular/cli": "15.1.0-next.2",
     "@angular/compiler-cli": "15.1.0-next.2",
