--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@types/express": "latest",
+    "@types/express": "4.17.17",
     "@types/node": "18.15.11",
     "@angular-devkit/build-angular": "15.1.0-next.2",
     "@angular/cli": "15.1.0-next.2",
