--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.17",
-    "@types/node": "18.15.11",
+    "@types/node": "^20.10.3",
     "@angular-devkit/build-angular": "15.1.0-next.2",
     "@angular/cli": "15.1.0-next.2",
     "@angular/compiler-cli": "15.1.0-next.2",
